# validateio

./: .env.example  .gitignore  CLOUD_RUN_FIX.md  DEPLOYMENT.md  DEPLOYMENT_STATUS.md  DEPLOYMENT_VERIFICATION.md  DOCKER_OPTIMAL_SETUP.md  Makefile  NEXT_STEPS.md  NO_DOCKER_QUICKSTART.md  OPERATIONAL_STATUS.md  OPTIMAL_DOCKER_STATUS.md  QUICKSTART.md  README.md  SUPABASE_SETUP.md  add_api_key.sh  docker-compose.yml  package.json  setup_supabase_env.sh  start_dev.sh  test_quick.py  verify_deployment.sh
backend/: .gcloudignore  Dockerfile  Dockerfile.backup  Dockerfile.cloudrun  Dockerfile.dev  Dockerfile.minimal  Dockerfile.prod  Dockerfile.simple  Dockerfile.step1  OPERATIONAL_TEST_README.md  alembic.ini  main.py  main_hybrid.py  main_simple.py  migration_plan.md  pyproject.toml  quick_test.py  requirements-minimal.txt  requirements.minimal.txt  requirements.txt  simple_test.py  start.py  test_experiment_agent.py  test_main.py  test_operational.py  test_startup.py  test_validation_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: 20250707_182506_initial_migration.py
backend/app/: __init__.py  worker.py
backend/app/agents/: README_EXPERIMENT_AGENT.md  __init__.py  example_integration.py  experiment_generator_agent.py  market_research_agent.py  marketing_autopilot_agent.py
backend/app/api/: deps.py
backend/app/core/: auth.py  config.py  logging.py  supabase.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  user.py  (+1 more)
backend/scripts/: create_migration.sh  run_migrations.sh
backend/supabase/: README.md
(+84 files in other folders)
